--- a/#src/scss/config.scss
+++ b/#src/scss/config.scss
@@ -1,6 +1,7 @@
 // <НАСТРОЙКИ СЕТКИ> =========================================================================================================
 
 $mw: 1470px;
+$minw: 359.58px;
 $xs: 575.98px;
 $sm: 767.98px;
 $md: 991.98px;
@@ -12,22 +13,31 @@ $elg: 1499.98px;
 	margin: 0 auto;
 	padding: 0 15px;
 	width: 100%;
+
 	@media (max-width: $elg) {
 		max-width: 1170px;
 		padding: 0 15px;
 	}
+
 	@media (max-width: $lg) {
 		max-width: 970px;
 	}
+
 	@media (max-width: $md) {
 		max-width: 750px;
 	}
+
 	@media (max-width: $sm) {
 		max-width: 600px;
-		padding: 0 10px;
+		padding: 0 30px;
 	}
+
 	@media (max-width: $xs) {
 		max-width: 100%;
+	}
+
+	@media (max-width: $minw) {
+		padding: 0 10px;
 	}
 }
 // </НАСТРОЙКИ СЕТКИ> =========================================================================================================
@@ -66,10 +76,11 @@ img {
 
 .wrapper {
 	position: relative;
-	
+
 	display: flex;
 	flex-direction: column;
 	min-height: 100%;
+	overflow-x: hidden;
 
 	background-color: #e5e5e5;
 
@@ -112,7 +123,7 @@ img {
 
 .title-large {
 	margin: 0;
-	padding-bottom: 55px;
+	// padding-bottom: 55px;
 
 	color: #000;
 	font-weight: 500;
@@ -121,7 +132,7 @@ img {
 
 .title-medium {
 	margin: 0;
-	padding-bottom: 50px;
+	// padding-bottom: 50px;
 
 	color: #000;
 	font-weight: 400;
