--- a/#src/scss/home-publications.scss
+++ b/#src/scss/home-publications.scss
@@ -9,23 +9,39 @@
 	// .home-publications__title
 
 	&__title {
+		margin-bottom: 60px;
+
 		text-align: center;
+
+		@media (max-width: $sm) {
+			margin-bottom: 30px;
+		}
 	}
 
 	// .home-publications__box
 
 	&__box {
-		padding: 50px 30px;
+		@media (min-width: 576px) {
+			padding: 50px 30px;
 
-		background-color: #ffffff;
-		border-radius: 15px;
-		box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+			background-color: #ffffff;
+			border-radius: 15px;
+			box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+		}
 	}
 
 	// .home-publications__box-inner
 
 	&__box-inner {
 		display: flex;
+
+		@media (max-width: $elg) {
+			align-items: flex-start;
+		}
+
+		@media (max-width: $lg) {
+			flex-direction: column;
+		}
 	}
 
 	// .home-publications__image-wrapper
@@ -35,6 +51,16 @@
 		max-width: 340px;
 		width: 100%;
 		margin-right: 30px;
+
+		@media (max-width: $lg) {
+			margin-right: 0;
+			margin-bottom: 30px;
+		}
+
+		@media (max-width: $sm) {
+			max-width: 220px;
+			margin-bottom: 15px;
+		}
 	}
 
 	// .home-publications__image
@@ -45,7 +71,13 @@
 		height: 100%;
 		margin-right: 30px;
 
+		object-fit: cover;
+		object-position: center;
 		box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+
+		@media (max-width: $sm) {
+			max-height: 220px;
+		}
 	}
 
 	// .home-publications__info
@@ -68,6 +100,12 @@
 		line-height: 35px;
 		letter-spacing: 0.1em;
 		text-decoration: none;
+
+		@media (max-width: $sm) {
+			margin-bottom: 5px;
+
+			font-size: 16px;
+		}
 	}
 
 	// .home-publications__info-title
@@ -78,8 +116,16 @@
 		color: #2f2f2f;
 		font-weight: 500;
 		font-size: 28px;
-		line-height: 33px;
+		line-height: 1.4;
 		letter-spacing: 0.1em;
+
+		@media (max-width: $sm) {
+			font-size: 20px;
+		}
+
+		@media (max-width: $xs) {
+			font-size: 14px;
+		}
 	}
 
 	// .home-publications__info-subtitle
@@ -89,6 +135,14 @@
 		font-size: 24px;
 		line-height: 28px;
 		letter-spacing: 0.1em;
+
+		@media (max-width: $sm) {
+			font-size: 18px;
+		}
+
+		@media (max-width: $xs) {
+			font-size: 14px;
+		}
 	}
 
 	// .home-publications__info-text
@@ -98,11 +152,20 @@
 		font-weight: 300;
 		font-size: 20px;
 		line-height: 1.7;
+
+		@media (max-width: $sm) {
+			font-size: 14px;
+		}
+
+		@media (max-width: $xs) {
+			font-size: 12px;
+		}
 	}
 
 	// .home-publications__info-link
 
 	&__info-link {
+		align-self: flex-start;
 		margin-top: auto;
 
 		color: #2f2f2f;
@@ -110,8 +173,16 @@
 		font-size: 24px;
 		line-height: 28px;
 		letter-spacing: 0.1em;
+		text-decoration: none;
 
-		padding-bottom: 1px solid #2f2f2f;
+		border-bottom: 2px solid #2f2f2f;
+
+		@media (max-width: $sm) {
+			font-size: 12px;
+			line-height: 1.1;
+
+			border-width: 1px;
+		}
 	}
 }
 .container {
