--- a/goodies/css/style.css
+++ b/goodies/css/style.css
@@ -115,6 +115,7 @@ img {
       -ms-flex-direction: column;
           flex-direction: column;
   min-height: 100%;
+  overflow-x: hidden;
   background-color: #e5e5e5;
 }
 
@@ -152,7 +153,6 @@ img {
 
 .title-large {
   margin: 0;
-  padding-bottom: 55px;
   color: #000;
   font-weight: 500;
   font-size: 36px;
@@ -160,7 +160,6 @@ img {
 
 .title-medium {
   margin: 0;
-  padding-bottom: 50px;
   color: #000;
   font-weight: 400;
   font-size: 30px;
@@ -201,7 +200,7 @@ img {
   display: block;
   width: 100%;
   margin: 0;
-  padding: 15px 55px 15px 25px;
+  padding: 12px 55px 12px 25px;
   color: #000000;
   font-size: 14px;
   background-color: #f4f4f4;
@@ -240,6 +239,9 @@ img {
   height: 20px;
   padding: 0;
   background-image: url(../img/icons/icons.svg#search-header);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -270,9 +272,20 @@ img {
 }
 
 .header__links-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   max-width: 42px;
   width: 100%;
-  max-height: 42px;
+  height: 42px;
   padding: 8px;
   background: #ffffff;
   border-radius: 50%;
@@ -281,6 +294,7 @@ img {
 }
 
 .header__links-image {
+  width: 100%;
   max-width: 26px;
   max-height: 26px;
 }
@@ -469,25 +483,9 @@ img {
 }
 
 .header__menu-list {
-  position: absolute;
-  top: calc(100% + 13px);
-  left: 0;
-  z-index: 10;
-  width: 100%;
-  max-height: 0px;
   margin: 0;
   padding: 0 10px;
-  overflow: hidden;
-  background-color: #fff;
   list-style: none;
-  -webkit-box-shadow: -2px 1px 5px rgba(0, 0, 0, 0.05);
-          box-shadow: -2px 1px 5px rgba(0, 0, 0, 0.05);
-  -webkit-transition-property: max-height, padding;
-  -o-transition-property: max-height, padding;
-  transition-property: max-height, padding;
-  -webkit-transition-duration: 0.5s;
-       -o-transition-duration: 0.5s;
-          transition-duration: 0.5s;
 }
 
 .header__menu-link {
@@ -521,6 +519,52 @@ img {
 .header__menu-avatar {
   width: 100%;
   height: 100%;
+}
+
+.header__close {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  width: 25px;
+  height: 25px;
+}
+
+.header__close::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+}
+
+.header__close::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+}
+
+.header__burger-item {
+  width: 100%;
+  height: 4px;
+  background-color: #2f2f2f;
+}
+
+.header__burger-item + .header__burger-item {
+  margin-top: 6px;
 }
 
 .hero {
@@ -721,12 +765,15 @@ img {
 }
 
 .hero__slider .slick-dots li.slick-active button {
-  background-color: #FF934B;
+  background-color: #ff934b;
 }
 
 .hero__slider-item {
   position: relative;
   z-index: 3;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .hero__slider-item::after {
@@ -758,7 +805,7 @@ img {
       -ms-flex-align: center;
           align-items: center;
   height: 100%;
-  padding: 20px 30px;
+  padding: 20px 30px 50px;
   color: #ffffff;
 }
 
@@ -767,6 +814,7 @@ img {
   font-size: 68px;
   font-weight: bold;
   line-height: 70px;
+  text-align: center;
 }
 
 .hero__subtitle {
@@ -774,6 +822,7 @@ img {
   font-weight: 300;
   font-size: 24px;
   line-height: 35px;
+  text-align: center;
 }
 
 .hero__btn {
@@ -807,7 +856,6 @@ img {
           flex-direction: column;
   width: calc(20% - 30px);
   margin: 0 15px;
-  margin-bottom: 60px;
   background: #ffffff;
   border-radius: 15px;
   -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
@@ -922,7 +970,7 @@ img {
 .card-product__mark {
   position: absolute;
   top: -6px;
-  right: 10px;
+  right: 15px;
   display: inline-block;
   padding: 7px 5px 7px 17px;
   color: #ffffff;
@@ -1142,8 +1190,65 @@ img {
   padding-top: 60px;
 }
 
+.sales-leaders .slick-track {
+  padding-top: 60px;
+}
+
+.sales-leaders .slick-arrow {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 10;
+  width: 70px;
+  height: 70px;
+  padding: 0;
+  background-color: #84d776;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-transition: 0.35s;
+  -o-transition: 0.35s;
+  transition: 0.35s;
+}
+
+.sales-leaders .slick-arrow:hover {
+  background-color: #72d162;
+}
+
+.sales-leaders .slick-arrow::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 28px;
+  height: 30px;
+  background-image: url(../img/icons/icons.svg#discount-slider-arrow);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.sales-leaders .slick-prev {
+  left: -35px;
+}
+
+.sales-leaders .slick-next {
+  right: -35px;
+}
+
+.sales-leaders .slick-next::after {
+  -webkit-transform: translate(-50%, -50%) rotate(180deg);
+      -ms-transform: translate(-50%, -50%) rotate(180deg);
+          transform: translate(-50%, -50%) rotate(180deg);
+}
+
 .sales-leaders__inner {
-  padding: 90px 50px 0px;
+  padding: 90px 50px 60px;
   background: #fefefe;
   border-radius: 15px;
   -webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
@@ -1201,10 +1306,10 @@ img {
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 16px;
+  width: 28px;
   height: 30px;
   background-image: url(../img/icons/icons.svg#discount-slider-arrow);
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -1251,15 +1356,8 @@ img {
 }
 
 .home-publications__title {
+  margin-bottom: 60px;
   text-align: center;
-}
-
-.home-publications__box {
-  padding: 50px 30px;
-  background-color: #ffffff;
-  border-radius: 15px;
-  -webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
-          box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
 }
 
 .home-publications__box-inner {
@@ -1281,6 +1379,10 @@ img {
   width: 100%;
   height: 100%;
   margin-right: 30px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
   -webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
           box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
 }
@@ -1312,7 +1414,7 @@ img {
   color: #2f2f2f;
   font-weight: 500;
   font-size: 28px;
-  line-height: 33px;
+  line-height: 1.4;
   letter-spacing: 0.1em;
 }
 
@@ -1331,16 +1433,20 @@ img {
 }
 
 .home-publications__info-link {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   margin-top: auto;
   color: #2f2f2f;
   font-weight: bold;
   font-size: 24px;
   line-height: 28px;
   letter-spacing: 0.1em;
-  padding-bottom: 1px solid #2f2f2f;
+  text-decoration: none;
+  border-bottom: 2px solid #2f2f2f;
 }
 
 .footer {
+  position: relative;
   margin-top: 120px;
   background-image: url(../img/footer/footer-texture.jpg);
   background-size: cover;
@@ -1348,7 +1454,21 @@ img {
   background-repeat: no-repeat;
 }
 
+.footer::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  background-color: rgba(23, 23, 23, 0.4);
+}
+
 .footer__inner {
+  position: relative;
+  z-index: 3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1385,6 +1505,7 @@ img {
   font-size: 26px;
   line-height: 30px;
   letter-spacing: 0.1em;
+  text-transform: uppercase;
   border-bottom: 1px solid #ffffff;
 }
 
@@ -1412,6 +1533,10 @@ img {
 
 .footer__list-link:hover {
   border-color: #ffffff;
+}
+
+.footer__list-link--underlined {
+  border-bottom: 1px solid #ffffff;
 }
 
 .footer__social {
@@ -1445,8 +1570,9 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  max-width: 390px;
   width: 100%;
-  max-height: 60px;
+  height: 70px;
   text-align: center;
   text-decoration: none;
   border: 1px solid #dfdfdf;
@@ -1485,7 +1611,7 @@ img {
 .footer__contact-text {
   position: relative;
   display: inline-block;
-  margin: 20px 32px;
+  margin: 0px auto;
   color: #dfdfdf;
   font-weight: 500;
   font-size: 20px;
@@ -1515,6 +1641,7 @@ img {
 
 .footer__developer-link {
   margin-top: 30px;
+  padding-left: 5px;
   color: #dfdfdf;
   font-weight: normal;
   font-size: 18px;
@@ -1543,10 +1670,113 @@ img {
   text-transform: uppercase;
 }
 
+@media (min-width: 576px) {
+  .home-publications__box {
+    padding: 50px 30px;
+    background-color: #ffffff;
+    border-radius: 15px;
+    -webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+  }
+}
+
+@media (min-width: 992px) {
+  .header__menu-list {
+    position: absolute;
+    top: calc(100% + 13px);
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    max-height: 0px;
+    overflow: hidden;
+    background-color: #fff;
+    -webkit-box-shadow: -2px 1px 5px rgba(0, 0, 0, 0.05);
+            box-shadow: -2px 1px 5px rgba(0, 0, 0, 0.05);
+    -webkit-transition-property: max-height, padding;
+    -o-transition-property: max-height, padding;
+    transition-property: max-height, padding;
+    -webkit-transition-duration: 0.5s;
+         -o-transition-duration: 0.5s;
+            transition-duration: 0.5s;
+  }
+
+  .header__close {
+    display: none;
+  }
+
+  .header__burger {
+    display: none;
+  }
+}
+
 @media (max-width: 1499.98px) {
   .container {
     max-width: 1170px;
     padding: 0 15px;
+  }
+
+  .header__search {
+    max-width: 230px;
+    margin-left: 35px;
+  }
+
+  .header__links {
+    margin-left: 30px;
+  }
+
+  .header__links-item + .header__links-item {
+    margin-left: 15px;
+  }
+
+  .header__basket {
+    max-width: 60px;
+    height: 60px;
+  }
+
+  .hero__title {
+    font-size: 48px;
+    line-height: 1.3;
+  }
+
+  .discount-slider {
+    padding: 0px 85px;
+  }
+
+  .discount-slider .slick-next {
+    right: 20px;
+  }
+
+  .home-publications__box-inner {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+
+  .footer__inner {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-bottom: 0;
+  }
+
+  .footer__col {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    max-width: 33%;
+    width: 100%;
+    margin-bottom: 50px;
+  }
+
+  .footer__col--fourth {
+    max-width: 49%;
+  }
+
+  .footer__title {
+    margin-bottom: 25px;
+  }
+
+  .footer__contact-link + .footer__contact-link {
+    margin-top: 20px;
   }
 }
 
@@ -1554,24 +1784,474 @@ img {
   .container {
     max-width: 970px;
   }
+
+  .header__logo {
+    max-width: 100px;
+    margin-left: 0;
+  }
+
+  .header__search {
+    max-width: 180px;
+    margin-left: 20px;
+  }
+
+  .header__search-input {
+    padding: 15px 35px 15px 18px;
+    font-size: 12px;
+  }
+
+  .header__links {
+    margin-left: 20px;
+  }
+
+  .header__menu {
+    max-width: 180px;
+  }
+
+  .header__menu-user {
+    width: 65px;
+    height: 65px;
+    margin-left: 15px;
+  }
+
+  .hero__inner {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .hero__sidebar {
+    max-width: 100%;
+  }
+
+  .hero__sidebar-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .hero__sidebar-item {
+    width: 50%;
+  }
+
+  .hero__sidebar-bottom {
+    width: 100%;
+  }
+
+  .hero__content {
+    min-height: 440px;
+    margin-left: 0;
+    margin-bottom: 30px;
+  }
+
+  .discount-slider {
+    padding: 0px 150px;
+  }
+
+  .home-publications__box-inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .home-publications__image-wrapper {
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+
+  .footer__col {
+    max-width: 49%;
+  }
+
+  .footer__col--first {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    max-width: 49%;
+  }
+
+  .footer__col--fourth {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
 }
 
 @media (max-width: 991.98px) {
   .container {
     max-width: 750px;
   }
+
+  .header__inner {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    min-height: 120px;
+  }
+
+  .header__logo {
+    max-width: 85px;
+  }
+
+  .header__search {
+    max-width: 300px;
+  }
+
+  .header__search-input {
+    padding: 15px 20px 15px 12px;
+  }
+
+  .header__search-btn {
+    right: 10px;
+    width: 17px;
+    height: 17px;
+  }
+
+  .header__links {
+    display: none;
+  }
+
+  .header__links-box {
+    max-width: 35px;
+    max-height: 35px;
+  }
+
+  .header__links-image {
+    max-width: 19px;
+    max-height: 19px;
+  }
+
+  .header__basket {
+    max-width: 50px;
+    height: 50px;
+    margin-left: auto;
+  }
+
+  .header__basket-total {
+    width: 18px;
+    height: 18px;
+    font-size: 11px;
+    line-height: 18px;
+  }
+
+  .header__menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 100%;
+    z-index: 9999;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    max-width: 100%;
+    margin: 0;
+    color: #fff !important;
+    background: #000;
+    -webkit-transition: ease-out left 0.35s;
+    -o-transition: ease-out left 0.35s;
+    transition: ease-out left 0.35s;
+  }
+
+  .header__menu--open {
+    left: 0;
+  }
+
+  .header__menu-dropdown::before {
+    content: none;
+  }
+
+  .header__menu-dropdown::after {
+    content: none;
+  }
+
+  .header__menu-title {
+    display: none;
+  }
+
+  .header__menu-list {
+    position: relative;
+    top: auto;
+    left: auto;
+    max-height: 100%;
+    text-align: center;
+    background-color: transparent;
+  }
+
+  .header__menu-link {
+    padding: 5px 0;
+    color: #ffffff;
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 0.15em;
+  }
+
+  .header__menu-user {
+    display: none;
+  }
+
+  .header__burger {
+    display: block;
+    width: 30px;
+    margin-left: 30px;
+    cursor: pointer;
+  }
+
+  .hero {
+    padding-top: 45px;
+  }
+
+  .sales-leaders {
+    padding-top: 45px;
+  }
+
+  .sales-leaders .slick-arrow {
+    width: 60px;
+    height: 60px;
+  }
+
+  .sales-leaders .slick-arrow::after {
+    width: 20px;
+  }
+
+  .sales-leaders .slick-prev {
+    left: -25px;
+  }
+
+  .sales-leaders .slick-next {
+    right: -25px;
+  }
+
+  .sales-leaders__inner {
+    padding: 45px 100px 45px;
+  }
+
+  .discount {
+    padding-top: 45px;
+  }
+
+  .home-publications {
+    padding-top: 45px;
+  }
 }
 
 @media (max-width: 767.98px) {
   .container {
     max-width: 600px;
-    padding: 0 10px;
+    padding: 0 30px;
+  }
+
+  .hero__sidebar-item {
+    width: 100%;
+  }
+
+  .hero__slider .slick-dots {
+    bottom: 50px;
+  }
+
+  .hero__title {
+    font-size: 36px;
+  }
+
+  .sales-leaders .slick-track {
+    padding-top: 40px;
+  }
+
+  .sales-leaders__inner {
+    padding: 45px 30px 45px;
+  }
+
+  .discount-slider {
+    padding: 0px 116px;
+  }
+
+  .discount-slider .slick-track {
+    padding-top: 40px;
+  }
+
+  .discount-slider .slick-arrow {
+    width: 60px;
+    height: 60px;
+  }
+
+  .discount-slider .slick-arrow::after {
+    width: 20px;
+  }
+
+  .home-publications__title {
+    margin-bottom: 30px;
+  }
+
+  .home-publications__image-wrapper {
+    max-width: 220px;
+    margin-bottom: 15px;
+  }
+
+  .home-publications__image {
+    max-height: 220px;
+  }
+
+  .home-publications__info-date {
+    margin-bottom: 5px;
+    font-size: 16px;
+  }
+
+  .home-publications__info-title {
+    font-size: 20px;
+  }
+
+  .home-publications__info-subtitle {
+    font-size: 18px;
+  }
+
+  .home-publications__info-text {
+    font-size: 14px;
+  }
+
+  .home-publications__info-link {
+    font-size: 12px;
+    line-height: 1.1;
+    border-width: 1px;
+  }
+
+  .footer__col {
+    max-width: 100%;
+    margin-bottom: 35px;
+  }
+
+  .footer__col--first {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
   }
 }
 
 @media (max-width: 575.98px) {
   .container {
     max-width: 100%;
+  }
+
+  .hero {
+    padding-top: 30px;
+  }
+
+  .hero__content {
+    min-height: 280px;
+  }
+
+  .hero__slider .slick-dots {
+    bottom: 30px;
+  }
+
+  .hero__slider-box {
+    padding: 20px 15px 50px;
+  }
+
+  .hero__title {
+    margin-bottom: 15px;
+    font-size: 22px;
+  }
+
+  .hero__subtitle {
+    font-size: 14px;
+    line-height: 1.3;
+  }
+
+  .hero__btn {
+    padding: 10px 35px;
+    font-size: 10px;
+  }
+
+  .card-product__image {
+    min-height: 200px;
+  }
+
+  .sales-leaders {
+    padding-top: 30px;
+  }
+
+  .sales-leaders__box {
+    max-width: 300px;
+    margin: 0 auto;
+  }
+
+  .discount-slider {
+    padding: 0;
+  }
+
+  .discount {
+    padding-top: 30px;
+  }
+
+  .home-publications {
+    padding-top: 30px;
+  }
+
+  .home-publications__info-title {
+    font-size: 14px;
+  }
+
+  .home-publications__info-subtitle {
+    font-size: 14px;
+  }
+
+  .home-publications__info-text {
+    font-size: 12px;
+  }
+
+  .footer__title {
+    font-size: 22px;
+  }
+
+  .footer__list-item + .footer__list-item {
+    margin-top: 10px;
+  }
+
+  .footer__list-link {
+    font-size: 18px;
+  }
+
+  .footer__contact-link {
+    max-width: 300px;
+  }
+
+  .footer__contact-text {
+    font-size: 16px;
+  }
+
+  .footer__contact-text::after {
+    -webkit-transform: scaleX(1);
+        -ms-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+
+  .footer__developer-link {
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 16px;
+    border-color: #dfdfdf;
+  }
+}
+
+@media (max-width: 359.58px) {
+  .container {
+    padding: 0 10px;
+  }
+
+  .card-product__image {
+    min-height: 140px;
   }
 }
 
