--- a/#src/scss/card-product.scss
+++ b/#src/scss/card-product.scss
@@ -263,17 +263,24 @@
 
 	&__btn-buy {
 		position: absolute;
+		top: 0;
 		right: 0;
 		bottom: 0;
 		left: 0;
 		z-index: 5;
 		transform: translateX(-100%);
 
+		display: block;
+		width: 100%;
 		padding: 7px 5px;
 
+		font-weight: 500;
+		color: #ffffff;
 		text-align: center;
+		text-transform: uppercase;
 
 		background-color: #4bb3ff;
+		border: none;
 		cursor: pointer;
 
 		transition: 0.35s;
