--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -14,6 +14,14 @@
 			justify-content: flex-start;
 			min-height: 120px;
 		}
+
+		// .header__inner>.header__search
+
+		& > .header__search {
+			@media (max-width: $xs) {
+				display: none;
+			}
+		}
 	}
 
 	// .header__logo
@@ -58,6 +66,14 @@
 		@media (max-width: $md) {
 			max-width: 300px;
 		}
+
+		@media (max-width: $sm) {
+			max-width: 270px;
+		}
+
+		@media (max-width: $xs) {
+			margin: 10px auto 0;
+		}
 	}
 
 	// .header__search-form
@@ -80,19 +96,41 @@
 		border: none;
 		border-radius: 15px;
 
-		// .header__search-input::placeholder
-
-		&::placeholder {
-			color: #8b8b8b;
-		}
-
 		@media (max-width: $lg) {
 			padding: 15px 35px 15px 18px;
+
 			font-size: 12px;
 		}
 
 		@media (max-width: $md) {
 			padding: 15px 20px 15px 12px;
+		}
+
+		@media (max-width: $xs) {
+			padding: 11px 20px 11px 12px;
+
+			color: #ffffff;
+
+			background-color: transparent;
+			border: 1px solid #ffffff;
+		}
+
+		// .header__search-input::placeholder
+
+		&::placeholder {
+			color: #8b8b8b;
+
+			@media (max-width: $xs) {
+				color: #dddddd;
+			}
+		}
+
+		// .header__search-input:focus
+
+		&:focus {
+			@media (max-width: $xs) {
+				outline: none;
+			}
 		}
 	}
 
@@ -285,6 +323,10 @@
 
 		text-align: center;
 
+		@media (max-width: $lg) {
+			max-width: 180px;
+		}
+
 		@media (max-width: $md) {
 			position: fixed;
 			top: 0;
@@ -298,14 +340,16 @@
 			align-items: center;
 			flex-direction: column;
 			max-width: 100%;
+			height: 100vh;
 			margin: 0;
 
-			color: #fff !important;
-
-			background: #000;
+			background-image: url(../img/footer/footer-texture.jpg);
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
+			// background: #000;
 
 			transition: ease-out left 0.35s;
-			// display: none;
 		}
 
 		// .header__menu--open
@@ -324,10 +368,6 @@
 			align-self: stretch;
 
 			text-align: left;
-		}
-
-		@media (max-width: $lg) {
-			max-width: 180px;
 		}
 	}
 
@@ -367,6 +407,10 @@
 
 	&__menu-dropdown {
 		// .header__menu-dropdown::before
+
+		@media (max-width: $xs) {
+			width: 100%;
+		}
 
 		&::before {
 			content: "";
@@ -409,6 +453,13 @@
 			}
 		}
 
+		// .header__menu-dropdown:focus
+		&:focus {
+			@media (max-width: $xs) {
+				outline: none;
+			}
+		}
+
 		// .header__menu-dropdown:focus-within
 
 		&:focus-within {
@@ -421,8 +472,10 @@
 			// .header__menu-dropdown:focus-within .header__menu-list
 
 			.header__menu-list {
-				max-height: 400px;
-				padding: 5px 10px;
+				@media (min-width: 992px) {
+					max-height: 400px;
+					padding: 5px 10px;
+				}
 				// overflow: visible;
 			}
 
@@ -451,8 +504,10 @@
 			// .header__menu-dropdown:hover .header__menu-list
 
 			.header__menu-list {
-				max-height: 400px;
-				padding: 5px 10px;
+				@media (min-width: 992px) {
+					max-height: 400px;
+					padding: 5px 10px;
+				}
 				// overflow: visible;
 			}
 
@@ -663,6 +718,10 @@
 			margin-left: 30px;
 
 			cursor: pointer;
+		}
+
+		@media (max-width: $xs) {
+			margin-right: 15px;
 		}
 
 		@media (min-width: 992px) {
