Basket page full and publication-page full

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -19,3 +19,6 @@
 @import "discount";
 @import "home-publications";
 @import "footer";
+@import "libs/checkbox.scss";
+@import "basket-page";
+@import "publication-page.scss";
