--- a/#src/scss/config.scss
+++ b/#src/scss/config.scss
@@ -82,7 +82,7 @@ img {
 	min-height: 100%;
 	overflow-x: hidden;
 
-	background-color: #e5e5e5;
+	background-color: #f8f8f8;
 
 	// .wrapper__header
 
@@ -128,6 +128,10 @@ img {
 	color: #000;
 	font-weight: 500;
 	font-size: 36px;
+
+	@media (max-width: $sm) {
+		font-size: 26px;
+	}
 }
 
 .title-medium {
@@ -140,6 +144,12 @@ img {
 
 	@media (max-width: $sm) {
 		font-size: 24px;
+	}
+}
+
+.footer-margin {
+	.footer {
+		margin-top: 60px;
 	}
 }
 // </КОНФИГ КЛАССОВ> =======================================
