--- a/#src/scss/home-publications.scss
+++ b/#src/scss/home-publications.scss
@@ -1,5 +1,12 @@
 .home-publications {
 	@include padding-section;
+	padding-bottom: 120px;
+
+	background-color: #f2f2f2;
+
+	@media (max-width: $sm) {
+		padding-bottom: 60px;
+	}
 
 	// .home-publications__inner
 
@@ -35,9 +42,9 @@
 	&__box-inner {
 		display: flex;
 
-		@media (max-width: $elg) {
-			align-items: flex-start;
-		}
+		// @media (max-width: $elg) {
+		// 	align-items: flex-start;
+		// }
 
 		@media (max-width: $lg) {
 			flex-direction: column;
@@ -74,6 +81,11 @@
 		object-fit: cover;
 		object-position: center;
 		box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+
+		
+		@media (max-width: $elg) {
+			height: 80%;
+		}
 
 		@media (max-width: $sm) {
 			max-height: 220px;
