--- a/goodies/css/style.css
+++ b/goodies/css/style.css
@@ -116,7 +116,7 @@ img {
           flex-direction: column;
   min-height: 100%;
   overflow-x: hidden;
-  background-color: #e5e5e5;
+  background-color: #f8f8f8;
 }
 
 .wrapper__header {
@@ -163,6 +163,10 @@ img {
   color: #000;
   font-weight: 400;
   font-size: 30px;
+}
+
+.footer-margin .footer {
+  margin-top: 60px;
 }
 
 .header {
@@ -1342,6 +1346,7 @@ img {
 
 .discount {
   padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .discount__title {
@@ -1351,6 +1356,8 @@ img {
 
 .home-publications {
   padding-top: 60px;
+  padding-bottom: 120px;
+  background-color: #f2f2f2;
 }
 
 .home-publications__title {
@@ -1445,7 +1452,6 @@ img {
 
 .footer {
   position: relative;
-  margin-top: 120px;
   background-image: url(../img/footer/footer-texture.jpg);
   background-size: cover;
   background-position: center;
@@ -1668,6 +1674,651 @@ img {
   text-transform: uppercase;
 }
 
+.id-styler {
+  position: relative;
+  padding-right: 35px;
+  cursor: pointer;
+}
+
+.id-styler__input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+}
+
+.id-styler__box {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 18px;
+  height: 18px;
+  background-image: url(../img/icons/icons.svg#check);
+  background-size: 14px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 0 0 0.1em #7c7c7c;
+          box-shadow: 0 0 0 0.1em #7c7c7c;
+  border-radius: 5px;
+  cursor: inherit;
+  -webkit-transition: 0.15s;
+  -o-transition: 0.15s;
+  transition: 0.15s;
+}
+
+.id-styler__input:checked + .id-styler__box {
+  background-color: #4bb3ff;
+  -webkit-box-shadow: 0 0 0 0.1em #4bb3ff;
+          box-shadow: 0 0 0 0.1em #4bb3ff;
+}
+
+.id-styler__input:focus + .id-styler__box {
+  -webkit-box-shadow: 0 0 0 0.1em #7c7c7c, 0 0 0 0.2em #000000;
+          box-shadow: 0 0 0 0.1em #7c7c7c, 0 0 0 0.2em #000000;
+}
+
+.id-styler__input:disabled + .id-styler__box {
+  background-color: gray;
+  border-color: #000;
+  background-image: none;
+}
+
+.id-styler__input:checked:disabled + .id-styler__box {
+  background-image: url(../img/icons/icons.svg#check);
+  background-color: gray;
+  border-color: #000;
+  -webkit-box-shadow: 0 0 0 0.1em #7c7c7c;
+          box-shadow: 0 0 0 0.1em #7c7c7c;
+}
+
+.jq-selectbox.focused .jq-selectbox__select-text {
+  outline: 1px solid #000000;
+}
+
+.jq-selectbox.focused .jq-selectbox__dropdown .sel {
+  border-color: #000000;
+}
+
+.jq-selectbox.opened .jq-selectbox__trigger-arrow {
+  -webkit-transform: rotateX(180deg);
+          transform: rotateX(180deg);
+}
+
+.jq-selectbox.opened .jq-selectbox__select-text {
+  outline: none;
+}
+
+.jq-selectbox.dropdown .jq-selectbox__dropdown {
+  top: 100% !important;
+  bottom: auto !important;
+}
+
+.jq-selectbox.dropup .jq-selectbox__dropdown {
+  top: auto !important;
+  bottom: 100% !important;
+}
+
+.jq-selectbox__select-text {
+  padding: 10px 5px;
+  background-color: #f4f4f4;
+  border-radius: 10px;
+}
+
+.jq-selectbox__select-text.placeholder {
+  color: #8b8b8b;
+}
+
+.jq-selectbox__dropdown {
+  right: 0;
+  left: 0;
+  padding: 0px 10px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 1px 1px 9px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 1px 9px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.jq-selectbox__dropdown ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin: 0;
+  padding: 0;
+}
+
+.jq-selectbox__dropdown li {
+  display: block;
+  margin: 5px 0;
+  border-bottom: 1px solid transparent;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.jq-selectbox__dropdown li:hover {
+  border-color: #000000;
+}
+
+.jq-selectbox__dropdown .disabled {
+  color: gray;
+}
+
+.jq-selectbox__dropdown .disabled:hover {
+  border-color: transparent;
+}
+
+.jq-selectbox__trigger {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.jq-selectbox__trigger-arrow {
+  width: 16px;
+  height: 8px;
+  background-image: url(../img/icons/icons.svg#t-arrow-down);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  -webkit-transition: 0.25s;
+  -o-transition: 0.25s;
+  transition: 0.25s;
+}
+
+.basket-page {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.basket-page__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.basket-page__title {
+  margin-bottom: 60px;
+}
+
+.basket-page__products {
+  -ms-flex-preferred-size: 950px;
+      flex-basis: 950px;
+  padding: 20px 8% 30px 20px;
+  background: #ffffff;
+  -webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+}
+
+.basket-page__products-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 25px;
+  padding: 0 10px 20px 10px;
+  border-bottom: 1px solid #e2e2e2;
+}
+
+.basket-page__products-title {
+  color: #2f2f2f;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 26px;
+  letter-spacing: 0.1em;
+}
+
+.basket-page__allbtn-text {
+  color: #2f2f2f;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.2;
+  letter-spacing: 0.1em;
+  cursor: inherit;
+}
+
+.basket-page__product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 25px;
+  padding: 0 30px 25px 0;
+  border-bottom: 1px solid #e2e2e2;
+}
+
+.basket-page__choice {
+  cursor: pointer;
+}
+
+.basket-page__choice-label {
+  cursor: inherit;
+}
+
+.basket-page__choice-checkbox {
+  cursor: inherit;
+}
+
+.basket-page__product-image-wrapper {
+  max-width: 161px;
+  max-height: 115px;
+  margin-left: 15px;
+}
+
+.basket-page__product-image {
+  display: block;
+  border-radius: 15px;
+}
+
+.basket-page__product-info {
+  max-width: 205px;
+  margin-left: 15px;
+}
+
+.basket-page__product-title {
+  margin-bottom: 5px;
+  color: #353535;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.16;
+}
+
+.basket-page__product-description {
+  margin-bottom: 5px;
+  color: #000000;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.basket-page__product-text {
+  color: #595959;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.basket-page__product-weight-net {
+  display: block;
+}
+
+.basket-page__quantity {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.basket-page__quantity-btn {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.basket-page__quantity-btn::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 100%;
+  height: 2px;
+  background-color: #000000;
+}
+
+.basket-page__quantity-btn--max::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 2px;
+  height: 100%;
+  background-color: #000000;
+}
+
+.basket-page__quantity-value {
+  width: 50px;
+  padding: 2px;
+  margin: 0 10px;
+  color: #000000;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  background: #fcfcfc;
+  border: 1px solid #c4c4c4;
+}
+
+.basket-page__price {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  text-align: center;
+}
+
+.basket-page__price-number {
+  color: #353535;
+  font-family: "Roboto Condensed", sans-serif;
+  font-style: italic;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+.basket-page__price-quantity {
+  padding-right: 10px;
+  color: #353535;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+}
+
+.basket-page__product-close {
+  padding: 0;
+  width: 20px;
+  height: 20px;
+  background-image: url(../img/icons/icons.svg#delete-product);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.basket-page__product-close:hover {
+  -webkit-transform: scale(1.15);
+      -ms-transform: scale(1.15);
+          transform: scale(1.15);
+}
+
+.basket-page__products-subtitle {
+  color: #7c7c7c;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.1em;
+}
+
+.basket-page__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.basket-page__body:last-child {
+  position: relative;
+  margin-top: 20px;
+  background-image: url(../img/icons/icons.svg#dot-leaders-bg);
+  background-repeat: repeat-x;
+  background-position: center 13px;
+  background-size: 5px;
+}
+
+.basket-page__body:last-child .basket-page__body-text {
+  padding-right: 4px;
+  background-color: #ffffff;
+}
+
+.basket-page__body:last-child .basket-page__body-price {
+  padding-left: 6px;
+  background-color: #ffffff;
+}
+
+.basket-page__body-text {
+  color: #353535;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.basket-page__body-price {
+  font-family: "Roboto Condensed", sans-serif;
+  font-style: italic;
+  font-weight: 700;
+  color: #353535;
+  font-size: 20px;
+  line-height: 23px;
+}
+
+.basket-page__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 0 10px;
+}
+
+.basket-page__footer-text {
+  color: #2f2f2f;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 26px;
+  letter-spacing: 0.1em;
+}
+
+.basket-page__footer-price {
+  font-family: "Roboto Condensed", sans-serif;
+  font-style: italic;
+  font-weight: 700;
+  color: #353535;
+  font-size: 20px;
+  line-height: 23px;
+}
+
+.basket-page__payment {
+  -ms-flex-preferred-size: 460px;
+      flex-basis: 460px;
+  margin-left: 30px;
+  padding: 25px 14px 25px 20px;
+  background: #ffffff;
+  -webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+}
+
+.basket-page__payment-title {
+  margin-bottom: 25px;
+  color: #2f2f2f;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 26px;
+  letter-spacing: 0.1em;
+}
+
+.basket-page__payment-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.basket-page__payment-input {
+  -ms-flex-preferred-size: calc(50% - 15px);
+      flex-basis: calc(50% - 15px);
+  padding: 11px 15px;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 16px;
+  background-color: #f4f4f4;
+  border: none;
+  border-radius: 10px;
+}
+
+.basket-page__payment-input:last-child {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin-top: 30px;
+  margin-bottom: 25px;
+}
+
+.basket-page__payment-heading {
+  margin-bottom: 25px;
+  color: #2f2f2f;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0.1em;
+}
+
+.basket-page__delivery-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 33%;
+  padding-right: 0;
+  padding-left: 32px;
+}
+
+.basket-page__delivery-label .id-styler__box {
+  right: auto;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.basket-page__delivery-text {
+  color: #2f2f2f;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.1em;
+}
+
+.basket-page__payment-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 20px 0px 30px;
+}
+
+.basket-page__payment-btn {
+  width: 100%;
+  padding: 16px 10px;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  text-transform: uppercase;
+  background: #ff8635;
+  border: none;
+  border-top: 3px solid #ff8635;
+  border-bottom: 3px solid #ff6904;
+  border-radius: 15px;
+  cursor: pointer;
+  -webkit-transition: 0.35s;
+  -o-transition: 0.35s;
+  transition: 0.35s;
+}
+
+.basket-page__payment-btn:hover {
+  background-color: #ff771c;
+}
+
+.publication-page__box {
+  padding: 30px 25px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+}
+
+.publication-page__title {
+  text-align: left;
+}
+
+.publication-page__product {
+  margin-bottom: 60px;
+  padding-bottom: 50px;
+  border-bottom: 2px solid #e2e2e2;
+}
+
+.publication-page__product:last-child {
+  border: none;
+  margin-bottom: 0;
+}
+
 @media (min-width: 576px) {
   .home-publications__box {
     padding: 50px 30px;
@@ -1754,10 +2405,8 @@ img {
     right: 20px;
   }
 
-  .home-publications__box-inner {
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+  .home-publications__image {
+    height: 80%;
   }
 
   .footer__inner {
@@ -1785,6 +2434,19 @@ img {
 
   .footer__contact-link + .footer__contact-link {
     margin-top: 20px;
+  }
+
+  .basket-page__inner {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .basket-page__payment {
+    margin-top: 40px;
+    margin-left: 0;
   }
 }
 
@@ -2056,12 +2718,49 @@ img {
   .home-publications {
     padding-top: 45px;
   }
+
+  .basket-page {
+    padding-top: 45px;
+  }
+
+  .basket-page__product {
+    position: relative;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .basket-page__product-info {
+    max-width: 100%;
+  }
+
+  .basket-page__quantity {
+    -ms-flex-preferred-size: 43%;
+        flex-basis: 43%;
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+    margin-top: 20px;
+  }
+
+  .basket-page__price {
+    margin-top: 20px;
+  }
+
+  .basket-page__product-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
 }
 
 @media (max-width: 767.98px) {
   .container {
     max-width: 600px;
     padding: 0 30px;
+  }
+
+  .title-large {
+    font-size: 26px;
   }
 
   .title-medium {
@@ -2109,6 +2808,10 @@ img {
     width: 20px;
   }
 
+  .home-publications {
+    padding-bottom: 60px;
+  }
+
   .home-publications__title {
     margin-bottom: 30px;
   }
@@ -2145,10 +2848,6 @@ img {
     border-width: 1px;
   }
 
-  .footer {
-    margin-top: 60px;
-  }
-
   .footer__col {
     max-width: 100%;
     margin-bottom: 35px;
@@ -2158,6 +2857,39 @@ img {
     -webkit-box-ordinal-group: 0;
         -ms-flex-order: -1;
             order: -1;
+  }
+
+  .basket-page__title {
+    margin-bottom: 40px;
+    text-align: center;
+  }
+
+  .basket-page__product-image-wrapper {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    margin-bottom: 10px;
+    margin-left: 0;
+  }
+
+  .basket-page__product-info {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    margin-left: 0;
+  }
+
+  .basket-page__quantity {
+    -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+  }
+
+  .publication-page__box {
+    padding: 20px 10px;
+  }
+
+  .publication-page__product {
+    margin-bottom: 30px;
+    padding-bottom: 10px;
   }
 }
 
@@ -2349,6 +3081,95 @@ img {
     margin-right: auto;
     font-size: 16px;
     border-color: #dfdfdf;
+  }
+
+  .basket-page {
+    padding-top: 30px;
+  }
+
+  .basket-page__products-title {
+    font-weight: 500;
+    font-size: 16px;
+  }
+
+  .basket-page__choice {
+    margin-left: 30px;
+  }
+
+  .basket-page__quantity {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    margin-left: auto;
+  }
+
+  .basket-page__price {
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+  }
+
+  .basket-page__price-number {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .basket-page__price-quantity {
+    font-size: 19px;
+    line-height: 22px;
+  }
+
+  .basket-page__body:last-child {
+    margin-top: 15px;
+  }
+
+  .basket-page__body-text {
+    font-size: 16px;
+  }
+
+  .basket-page__footer-text {
+    font-size: 16px;
+  }
+
+  .basket-page__payment-title {
+    font-size: 16px;
+  }
+
+  .basket-page__payment-input {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    margin: 0 0 15px 0;
+  }
+
+  .basket-page__payment-input:last-child {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    margin: 0 0 15px 0;
+  }
+
+  .basket-page__payment-heading {
+    font-size: 16px;
+  }
+
+  .basket-page__delivery-label {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    max-width: 100%;
+    margin-top: 15px;
+  }
+
+  .basket-page__delivery-text {
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 410px) {
+  .basket-page__allbtn-label {
+    width: 100%;
+    margin-top: 7px;
   }
 }
 
