Contacts and profile full

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -29,3 +29,6 @@
 @import "product-one";
 @import "catalog";
 @import "order-status";
+@import "profile-page";
+@import "profile-favorites";
+@import "contact-page";
